# polycore

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/polycore/: cli.py  collapse.py  core_mask.py  distance.py  io_ops.py  utils.py
src/polycore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_smoke.py
