[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polycore"
version = "1.1.0"
description = "Core genome analysis for (poly)ploid organisms"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Jared Johnson", email = "jared.johnson@doh.wa.gov"}]

dependencies = [
  "numpy>=1.26.4",
  "screed>=1.1,<1.2",
  "psutil>=5.9",
  "plotly>=5.20",
]

[project.optional-dependencies]
viz = ["plotly>=5.20"]

[project.scripts]
polycore = "polycore.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
